  - Wiederkehrende Rechnungen können nun automatisch per E-Mail
    verschickt werden.
  - Die meisten Suchmasken ignorieren nun bei Teilwortsuchen führende
    und anhängende Leerzeichen.
  - Abteilung in Verkauf->Berichte-Rechnungen anzeigen lassen.
  - Customer-Picker beim Projekt erzeugen eingebaut.
  - Es gibt jetzt Schnellsuchen zu den meisten Belegen und Stammdaten in der
    Leiste am oberen Rand, konfigurierbar in der Mandantenkonfiguration.

Brieffunktion:
  - Beim Speichern und Drucken von Briefen werden diese im
    WebDAV-Verzeichnis gespeichert, sofern das Feature in der
    Mandantenkonfiguration aktiv ist.
  - Die Weiterleitung nach dem Löschen von Briefen wurde gefixt.
  - Das Drucken von Briefen direkt auf Drucker wurde gefixt.
  - Die Auswahl einer Ansprechpersonen in der Brieffunktion wurde gefixt.
  - Briefe können nun per E-Mail verschickt werden.

2016-03-12 - Release 3.4.0

Größere neue Features:

- Massenkonvertierung von Lieferscheinen nach Rechnung mit direktem Ausdruck (optional)

  Die manuelle Umwandlung von Lieferscheinen zu Rechnungen stößt bei größeren Daten-
  mengen an die Grenze der Anwendergeduld. Entsprechend können Lieferschein-Objekte
  direkt in Rechnungsobjekte gewandelt und zum Drucker geschickt werden. Die Ab-
  arbeitung erfolgt als Hintergrund-Job mit Status-Information (alle 5 sek) an den
  Benutzer. Auf der aktuellen Testumgebung (8000 bogomips) konnten hier 440 Objekte
  in 2 Minuten gewandelt und in weiteren 5 Minuten als PDF erzeugt werden. Die Rechnungen
  werden auch entsprechend im WebDAV archiviert, falls diese Option mandantenseitig
  eingestellt ist.

- E-Mail-Journal

  Alle aus kivitendo verschickten E-Mails werden in einem Journal
  gespeichert und können von Benutzern später erneut eingesehen
  werden. Dabei wird auch der Versandstatus (erfolgreich/
  fehlgeschlagen) hinterlegt. Anhänge können erneut heruntergeladen
  werden.

  Administratoren (Recht »config«) können dabei alle verschickten